代码沙箱程序安全控制：超时控制、限制资源分配、黑白名单、安全管理器